# lmi-bmc

./: CMakeLists.txt  LMI_BMC.mof  README.md  make-release.sh
mof/: CMakeLists.txt  LMI_BMC.mof
pkg/: CMakeLists.txt  openlmi-bmc.spec.skel
src/: CMakeLists.txt  LMI_BMCProvider.c  LmiBmc.c  LmiBmc.h  fix_reg.sh
